--- a/endpoints/mysql_connect.config
+++ b/endpoints/mysql_connect.config
@@ -1,8 +1,8 @@
 <?php
 
-$conn = mysqli_connect('server','account','password','database');
+$myconn = new mysqli('server','account','password','database');
 
-if(empty($conn)){
+if($myconn->connect_error){
     die("Server is dead");
 }
 
