--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "materialize-css": "^0.100.2",
+    "npm": "^6.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
